# stubborn-status

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: RELEASE.md
src/stubborn_status/: __init__.py  __main__.py  aggregate.py  cli.py  models.py  registry.py  report.py
tests/: test_aggregate.py
